# pytest-dev__iniconfig

./: .pre-commit-config.yaml  CHANGELOG  pyproject.toml
.github/workflows/: main.yml  test.yml
src/iniconfig/: __init__.py  _parse.py
testing/: test_iniconfig.py
